# gf-recommendation

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
data/: bottom_time.csv  residual_nitrogen_time.csv  surface_interval.csv
notebooks/: GF tables.ipynb  GF_recommendation.ipynb  PRT_and_GF.ipynb  Repetative-dives-analysis.ipynb
src/: app.py  gf_selection.py
src/assets/: styles.css
