[project]
name = "gf-recommendation"
version = "0.1.0"
description = "Select Gradient Factors for Buhlmann ZHL-16C model"
authors = [
    {name = "Heikki Pulkkinen",email = "heikki.j.pulkkinen@gmail.com"}
]
license = {text = "GNU General Public License v3.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "dash (>=2.18.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
